20080502:
- better support for device special files (files under /dev)
- update to always handle largefile correctly
- fix conifgure script for sendfile functionality
- minor docu updates
- minor build update
  (compile with -c -O, mbuffer.o is dependent on Makefile)
- allow in-memory locking of file based buffers

20080329:
- configure should check if ST_BLKSIZE feature is available
- compile with -O instead of -g per default
- hostnames may have underscores and/or dash
- orthographic fix
- use inline and restrict if available
- honor --disable-assert
- use directio for input, too

20080212:
- fixed a race-condition causing incorrectly written last block

20080122:
- fix wrong assertion on dup2
- fix 'make distclean' to also remove mbuffer.exe
- fix installation of manpage

20080104:
- updated status display
- POSIX conformance update: read from stderr instead of relying on
  /dev/tty exists, fallback to /dev/tty if stderr is unreadable
- update to build on HPUX.11 (thanks go to testdrive.hp.com)
- several configure fixes and updates
- fixed invalid exitcode without console (Alex Kramarov)
- correction for full/empty report

20070911:
- bugfix: search for MD5 functions with correct function names

20070826:
- bugfix: search for MD5 functions in libcrypto instead of libssl
- bugfix: search for MD5 functions in libmd5 using different function
          to avoid incorrect caching of results

20070518:
- bugfix: misplaced ifdef could lead to failures for options -d and -b
  on systems that do not support device block size determination
- fixed possible hang on SIGINT without status thread
- write summary to stderr if no tty is available

20070502:
- added support for setting the output device's volume size explicitly
  (patch by Sean Walmsley)
- minor cleanups
- make locking more solid
  (in theory [only], a deadlock could have occurred)
- assert() everything

20070401:
- prefix name of executable before every message
- added some missing newlines